# logging

./: .travis.yml  CMakeLists.txt
Log/: Attribute.cpp  Attribute.h  BasePattern.cpp  BasePattern.h  CharUtilities.cpp  CharUtilities.h  Configuration.cpp  Configuration.h  ConsoleWriter.cpp  ConsoleWriter.h  DateTime.cpp  DateTime.h  DateTimePattern.cpp  DateTimePattern.h  DynamicLogger.cpp  DynamicLogger.h  FileWriter.cpp  FileWriter.h  GlobalDefinitions.h  IData.h  ILogStatement.cpp  ILogStatement.h  ILoggerData.cpp  ILoggerData.h  ILoggerWriter.cpp  ILoggerWriter.h  IPreMessage.cpp  IPreMessage.h  IncludeAllPatterens.h  LString.cpp  LString.h  LogData.cpp  LogData.h  LogFilter.cpp  LogFilter.h  LogLevel.cpp  LogLevel.h  LogLevelPattern.cpp  LogLevelPattern.h  LogStatement.cpp  (+48 more)
LogTesting/: DateTimeTest.cpp  GeneralTest.cpp  GeneralTest.h  Log.config  LogStatementTest.cpp  LogTesting.cpp  LogTesting.h  LoggerListener.cpp  LoggerListener.h  LoggerManagerTest.cpp  LoggerTest.cpp  NetworkWriterMock.cpp  NetworkWriterMock.h  PerformanceTest.cpp  PerformanceTest.h  TestOutput.py
cmake-modules/: AddCcons.cmake  AddGTest.cmake
